# Qt-2048

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: cell.h  database.h  game.h  gameboard.h  login.h  mainwindow.h
src/: cell.cpp  database.cpp  game.cpp  gameboard.cpp  login.cpp  mainwindow.cpp
